- Fix bug #29368 : The destructor is called when an exception is thrown from the constructor