Zend/zend_execute.c
@@ -2777,6 +2777,9 @@ int zend_do_fcall_common_helper(ZEND_OPCODE_HANDLER_ARGS)
 	if (EG(This)) {
 		if (EG(exception) && EX(fbc) && EX(fbc)->common.fn_flags&ZEND_ACC_CTOR) {
 			EG(This)->refcount--;
+			if (EG(This)->refcount == 1) {
+			    zend_object_store_ctor_failed(EG(This) TSRMLS_CC);
+			}
 			zval_ptr_dtor(&EG(This));
 		} else if (should_change_scope) {
 			zval_ptr_dtor(&EG(This));
